# crewai_server_test

./: .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/crewai_server/: crew.py  main.py
src/crewai_server/config/: agents.yaml  tasks.yaml
